Updated to Java 11 and CircleCI configuration